samples/_failures_safe/1761392361_93dd76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4423512b.c: In function ‘main’:
./samples/SAFE/__tmp_4423512b.c:170:9: error: expected declaration or statement at end of input
  170 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_4423512b.c:170:9: error: expected declaration or statement at end of input
